--- a/css/styles.css
+++ b/css/styles.css
@@ -11373,3 +11373,7 @@ section#contact form#contactForm :-ms-input-placeholder {
 .portfolio-item:hover img {
   transform: scale(1.05); /* Adjust the scale value as needed (1.05 = 5% larger) */
 }
+
+.masthead-heading {
+  transition: color 0.5s ease;
+}
